Closed Bug 1665001 Opened 4 years ago Closed 4 years ago

Custom page margins should not be allowed to go under the unwriteable margin.

Categories

(Core :: Printing: Setup, defect)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox82 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Regressed 1 open bug)

Details

Attachments

(2 files)

No description provided.
Summary: Custom page margins should go under the unwriteable margin. → Custom page margins should not be allowed to go under the unwriteable margin.
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e5d999b6f07f
Don't allow custom page margins to go under the unwriteable margin. r=jwatt

It seems on OSX the default is somehow not zero. This matches
equivalent code for regular paged reftests in
layout/tools/reftest/reftest-content.js

Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/autoland/rev/a4dccb7df26e
Ensure unwriteable margins are zero for print reftests. r=bobowen
Severity: -- → S3
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Regressions: 1672529
Regressions: 1673431
Regressions: 1679041
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: