Bug 1665001 - Don't allow custom page margins to go under the unwriteable margin. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D90231